--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
