--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "dotenv": "^16.4.7",
     "process": "^0.11.10",
     "react": "^18.3.1",
